# ArDu

./: .gitignore  ArDu-genotype-codons.py  ArDu-genotype.py  ArDu.py  ArDu_1.0-beta.py  ArDu_1.0.-beta.py  ArDu_1.0.py  ArDu_1.4.median.py  ArDu_CoverageFileRecap.py  ArDu_Parser.py  ArDu_WIP.py  ArDu_deprecated.py  ArDu_environment.yml  ArDu_updated2_20240613-2.py  CITATION.cff  JunctionSequenceBySoftclip-Finder.py  README.md  Test2.py.py  pyproject.toml
ArDuRun-AgambR-2026-05-22/: AgambR_BLAST_results.txt  AgambR_breakpoints.tsv  AgambR_bridging_pairs.tsv  AgambR_soft_clipped_sequences.fasta
Docs/Figures/: AgambR_coverage.tsv  Yop16-60_1-2_junction_reads.fasta
ardu/: __init__.py  __main__.py  bam.py  breakpoints.py  intervals.py  junctionlib.py  plotting.py  probe.py  signal.py
ardu/cli/: coverage.py  junctions.py  parser.py  softclips.py
docs/ArDuRun-ArduExampleRun-2026-06-11/: ArduExampleRun_breakpoints.tsv  ArduExampleRun_coverage.tsv  JunctionTest.tsv
docs/ArDuRun-ArduExampleRun-2026-06-11/junctions/: JunctionTest.tsv  JunctionTest_BLAST_filtered_pairs.txt  JunctionTest_soft_clipped_sequences.fasta
docs/ExampleRun/ArDuRun-ArduExampleRun-2026-06-11/: JunctionTest_bridging_pairs.tsv
docs/ExampleRun/ArDuRun-ArduExampleRun-2026-06-11/junctions/: JunctionTest_BLAST_results.txt  JunctionTest_bridging_pairs.tsv  Yop16-60_1-2_junction_reads.fasta
